<resources>
    <string name="app_name">FitGoals</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Registrarme</string>
    <string name="login">Iniciar Sesión</string>
    <string name="descriptionWelcome">Descubre tu rutina de
ejercicios ideal aquí</string>
    <string name="welcome_slogan">Explora las mejores rutinas de ejercicio enfocadas a cada grupo de músculos, con ayudas visuales de expertos</string>
    <string name="top_image_description_welcome">Imagen de bienvenida en la vista de Welcome</string>

    //Register Strings
    <string name="default_web_client_id">54480195605-3cc1odncn4qlr39iq2k1vtjbik35s2p7.apps.googleusercontent.com</string>

    //Personalizacion del perfil
    <string name="personalizacion_texto">Vamos a personalizar tu perfil, por favor completa los siguientes campos.</string>

    //Vista prinicpal
    <string name="HomeTextHeader">Elige el grupo muscular que deseas trabajar hoy</string>

    //Vista de Ejercicios

    //Vista de perfil
    <string name="home">Home</string>
    <string name="profile">Perfil</string>

    <string name="ProfileTextHeader">Bienvenido a tu perfil 😎</string>
    <string name="email_label">Correo electrónico: %s</string>
    <string name="age_label">Edad: %s</string>
    <string name="gender_label">Sexo: %s</string>
    <string name="height_label">Estatura: %s</string>
    <string name="weight_label">Peso actual: %s</string>
    <string name="UpdateWeightData">Ingresa tu nuevo pasa para guardarlo y te movtives a continuar con tus metas 🥳🥳</string>

    //Vista de los creditos
    <string name="credits_title">Créditos</string>
    <string name="credits_app_done_for">Aplicación hecha por:</string>
    <string name="back_button">Regresar</string>
    <string name="nuestrosNombres">Michael Fernando Torres Callejas, TC100220.\nCarlos Emiliano Torres Callejas, TC100321.\nGerson Daniel Monroy Valladares, MV100521.\nRodrigo Antonio Guzman Angulo, GA100620.</string>
    <string name="module">Asignatura:</string>
    <string name="moduleName">Desarrollo de Aplicaciónes Básicas, Grupo 01</string>
    <string name="teacher">Docente de la asignatura:</string>
    <string name="teacherName">Jaime Geovanni Cortez Flores</string>
    <string name="ejerciciosVistaHeader">Ejercítate a tu ritmo y apóyate de tutoriales</string>
</resources>