<?xml version="1.0" encoding="utf-8"?>
<!-- ScrollView asegura que todos los elementos de la UI sean accesibles en pantallas de diferentes tamaños permitiendo desplazarse verticalmente. -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- ConstraintLayout permite un diseño flexible y adaptable de los elementos de la UI. -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <!-- Título de la sección de créditos. -->
        <TextView
            android:id="@+id/tvCreditsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credits_title"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Información sobre el propósito de la aplicación. -->
        <TextView
            android:id="@+id/tvAppDoneFor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/credits_app_done_for"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/tvCreditsTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Nombres de los desarrolladores involucrados en la creación de la app. -->
        <TextView
            android:id="@+id/tvCreditsInfoNames"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nuestrosNombres"
            android:textSize="18sp"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/tvAppDoneFor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Módulo o curso para el cual fue desarrollada la aplicación. -->
        <TextView
            android:id="@+id/tvModule"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/module"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/tvCreditsInfoNames"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Nombre del módulo o curso. -->
        <TextView
            android:id="@+id/tvModuleName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/moduleName"
            android:textSize="18sp"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/tvModule"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Información sobre el docente del curso. -->
        <TextView
            android:id="@+id/teacher"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/teacher"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/tvModuleName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Nombre del docente. -->
        <TextView
            android:id="@+id/teacherName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/teacherName"
            android:textSize="18sp"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/teacher"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Foto representativa de los creadores o del equipo. -->
        <ImageView
            android:id="@+id/ivCreatorsPhoto"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/josueimagenejemplo"
            app:layout_constraintTop_toBottomOf="@id/teacherName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="30dp"/>

        <!-- Botón para volver a la pantalla anterior. -->
        <Button
            android:id="@+id/btnBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_red_dark"
            android:text="@string/back_button"
            android:textSize="22dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/ivCreatorsPhoto"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="50dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
